Z-index added to navbar to fix img:hover bug

--- a/app.css
+++ b/app.css
@@ -51,6 +51,7 @@ body {
   position: fixed;
   width: 100%;
   overflow: hidden;
+  z-index: 4;
 }
 .nav-content {
   display: flex;
